# rust-operator-catalog-viewer

./: .gitignore  Cargo.toml  Makefile  README.md  asciinema.txt  imagesetconfig.yaml
examples/: catalog-download-config.yaml  imagesetconfig.yaml
src/: main.rs
src/api/: mod.rs  schema.rs
src/auth/: credentials.rs
src/batch/: copy.rs  worker.rs
src/catalog/: mod.rs  process.rs
src/cli/: config.rs
src/config/: read.rs
src/error/: handler.rs
src/index/: resolve.rs
src/log/: logging.rs
src/manifests/: catalogs.rs
src/operator/: collector.rs
src/ui/: render.rs
test-artifacts/: manifest-list.json
test-artifacts/raw-tar-files/a4/: a48865
test-artifacts/raw-tar-files/b4/: b4385e
test-artifacts/simulate-api-call/: manifest-amd64-kube.json  manifest-amd64.json  manifest-arm64-kube.json  manifest-list-kube.json  manifest-list-operator.json  manifest-list.json  manifest-ppc64le-kube.json  manifest-s390x-kube.json  manifest.json
test-artifacts/test-index-operator/v1.0/: manifest.json
test-artifacts/test-index-operator/v1.0/cache/b4385e/configs/some-operator/: catalog.json
test-artifacts/test-index-operator/v1.0/cache/b4385e/configs/some-operator/updated-configs/: alpha.json  aws-load-balancer-operator.json  aws-load-balancer-operator.v0.0.1.json  aws-load-balancer-operator.v0.2.0.json  aws-load-balancer-operator.v1.0.0.json  stable-v0.1.json  stable-v0.2.json  stable-v0.json  stable-v1.0.json  stable-v1.json  uc0.json  uc1.json  uc2.json  uc3.json  uc4.json  uc5.json  uc6.json  uc7.json  uc8.json  uc9.json
test-artifacts/test-index-operator/v1.0/operators/some-operator/stable-v1/albo/aws-load-balancer-rhel8-operator/: manifest.json
test-artifacts/test-release-operator/v1.0/: manifest.json
test-artifacts/test-release-operator/v1.0/cache/ac202b/release-manifests/: image-references  release-metadata
test-artifacts/test-release-operator/v1.0/release/test-simple-operator/: manifest.json
