[package]
name = "operator-catalog-viewer"
version = "0.9.0"
edition = "2021"
authors = ["Luigi Zuccarelli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
thiserror = "1.0"
color-eyre = "0.6.3"
strum = "0.26.2"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
void = "1.0.2"
walkdir = "2.4.0"
clap = { version = "4.5.3", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.74"
rm_rf = "0.6.2"
base64 = { version = "0.21"}
urlencoding = "2.1.3"
reqwest = { version = "0.11.22", features = ["json"] }
futures = { version = "0.3"}
sha2 = "0.10.8"
hex = "0.4.3"
flate2 = "1.0.25"
tar = "0.4.38"
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.2.0" }
mirror-error = { git =  "https://github.com/lmzuccarelli/rust-mirror-error", branch = "main", version = "0.2.0" }
mirror-utils = { git =  "https://github.com/lmzuccarelli/rust-mirror-utils", branch = "main" , version = "0.5.0" }
mirror-auth = { git = "https://github.com/lmzuccarelli/rust-mirror-auth", branch = "main", version = "0.10.0" }
mirror-catalog = { git = "https://github.com/lmzuccarelli/rust-mirror-catalog", branch = "main" , version = "0.10.0" }
mirror-copy = { git = "https://github.com/lmzuccarelli/rust-mirror-copy", branch = "main", version = "0.10.0" }
mirror-config = { git = "https://github.com/lmzuccarelli/rust-mirror-config", branch = "main", version="0.2.0" }
mirror-catalog-index = { git = "https://github.com/lmzuccarelli/rust-mirror-catalog-index", branch = "main", version = "0.8.0"}

[dev-dependencies]
tokio-test = "0.4.3" 
serial_test = "2.0.0"
mockito = "1.2.0"

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization


